<resources>
    <string name="app_name">CareMate</string>
    <string name="loginUserName">loginUserName</string>
    <string name="loginUserPhone">loginUserPhone</string>
    <string name="toDoList">To-Do List</string>
    <string name="groups">Groups</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="toDo">To-Do</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="sign_in_successful">Signed in successfully</string>
    <string name="allTasks">All</string>
    <string name="toBeAssignedTaskes">To Be Assigned</string>
    <string name="myTask">My Tasks</string>
    <string name="noTakenTask">NO TAKEN TASK</string>
    <string name="noToBeAssignedTask">NO TO BE ASSIGNED TASK</string>
    <string name="noTask">NO TASK CREATED YET</string>
    <string name="invitations">Invitations</string>
    <string name="notInGroups">YOU ARE NOT IN ANY GROUPS YET</string>
    <string name="noInvitations">YOU HAVE NO PENDING INVITATIONS</string>
    <string name="title_activity_new_group">NewGroupActivity</string>
    <string name="new_group">Create New Group</string>
    <string name="elderlyName">Elderly Name</string>
    <string name="BirthdayDate">Birthday</string>
    <string name="invite">Invites</string>
    <string name="title_activity_invite_member">InviteMemberActivity</string>
    <string name="displayName">User Display Name</string>
    <string name="userInfoUpdateSuccessful">User info updated successfully</string>
    <string name="contactEmail">Contact Email (Optional)</string>
    <string name="userDisplayNameCantEmpty">User display name cannot be empty</string>
    <string name="emailSyntaxInvalid">Email Syntax Invalid</string>
    <string name="userSettings">User Settings</string>
    <string name="pleaseInputUserDisplayName">Please setup your user display name</string>
    <string name="hiauntie">hi auntie</string>
    <string name="ok">OK</string>
    <string name="no_internet_connection">No internet connections</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown_sign_in_response">Unknown sign in response</string>
    <string name="unknown_response">unknown response</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out_failed">Sign out fail</string>
    <string name="sign_out_successful">Signed out successfully</string>
    <string name="elderlyNameCannotBeEmpty">Elderly name is mandatory</string>
    <string name="tasks">Tasks</string>
    <string name="groupMember">Group Member</string>
    <string name="quitGroup">QUIT GROUP</string>
    <string name="me">Me</string>
    <string name="confirmQuitGroup">Confirm quit group?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="quitGroupSuccessfully">Quit Group Successfully</string>
    <string name="assigned">ASSIGNED</string>
    <string name="pending">PENDING</string>
    <string name="completed">COMPLETED</string>
    <string name="title_activity_create_new_task">CreateNewTaskActivity</string>
    <string name="newTask">Create New Task</string>
    <string name="taskName">Task Name</string>
    <string name="taskInfo">Task Info</string>
    <string name="taskDescription">Task Description (Optional)</string>
    <string name="schedule">Schedule</string>
    <string name="importance">Task Type</string>
    <string name="importantTask">Important</string>
    <string name="casualTask">Casual</string>
    <string name="reminder">Reminder</string>
    <string name="allDay">All-day</string>
    <string name="eventStart">Start</string>
    <string name="eventEnd">End</string>
    <string name="taskGroup">Task Group</string>
    <string name="taskNameNotEmptyValidation">Task name is mandatory</string>
    <string name="pleaseFillAllMandatField">Please fill in all mandatory fields</string>
    <string name="pleaseCheckInput">Please check your input</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="status">Status</string>
    <string name="taskDate">taskDate</string>
    <string name="taskNameLbl">taskNameLbl</string>
    <string name="takeUp">TAKE UP</string>
    <string name="reject">REJECT</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="taskDetail">Task Detail</string>
    <string name="taskNameColon">Task Name:</string>
    <string name="taskDescriptionColon">Task Description:</string>
    <string name="taskTypeColon">Task Type:</string>
    <string name="isAllDayEvent">Is All Day Event?</string>
    <string name="isAllDayEventPH">PH</string>
    <string name="no">No</string>
    <string name="markAsComplete">MARK AS COMPLETED</string>
    <string name="hyphen">  --- </string>
    <string name="taskOwner">Task Owner</string>
    <string name="taskStatus">Task Status</string>
    <string name="taskOwnership">Task Ownership</string>
    <string name="userSettingsUpdatedSuccess">User\'s settings updated successfully</string>
    <string name="polling">Polling</string>
    <string name="activePolling">ACTIVE</string>
    <string name="closedPolling">CLOSED</string>
    <string name="noActivePolling">No Active Polling</string>
    <string name="noClosedPolling">No Closed Polling</string>
    <string name="initiateNewPolling">Initiate New Polling</string>
    <string name="pollingQuestion">Polling Question</string>
    <string name="pollingGroup">Polling Group</string>
    <string name="pollingSetup">Polling Setup</string>
    <string name="singleVotesOnly">Single Vote Only</string>
    <string name="multipleVotes">Multiple Vote</string>
    <string name="votingMode">Voting Mode</string>
    <string name="votingOptions">Voting Options</string>
    <string name="noOfOptions">Number of Options:</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="option5">Option 5</string>
    <string name="pollingQNotEmptyValidation">Polling question is mandatory</string>
    <string name="pollingDetail">Polling Detail</string>
    <string name="endPolling">End Polling</string>
    <string name="submit">Submit</string>
    <string name="confirmClosePolling">Confirm close polling?</string>
    <string name="pollingResult">Polling Result</string>
    <string name="noVoterYet">No Voter for this option yet</string>
    <string name="noPolling">No Polling Yet</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="gettingStart">Start</string>
    <string name="seePollingStat">View Polling Statistics</string>
    <string name="invitationAccepted">Invitation accepted</string>
    <string name="invitationRejected">Invitation rejected</string>
    <string name="discussion">Discussion</string>
    <string name="send">Send</string>
    <string name="householdMonitoring">HomePlus</string>
    <string name="homePlus">HomePlus</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="noReading"> - </string>
    <string name="lastDataLogTime">Last data log time:</string>
    <string name="connectToDevice">Connect to device</string>
    <string name="deviceConnection">Device Connection</string>
    <string name="connectionPin">Connection Pin</string>
    <string name="clickToRefreshPin">Click to refresh connection pin</string>
    <string name="connectionInstruction">Input this connection pin at your home client to connect</string>
    <string name="channel_name">CareMate</string>
    <string name="channel_description">CareMate</string>
    <string name="noContact">Your contacts have not yet registered in CareMate</string>
    <string name="attachment">Attachment</string>
    <string name="select">SELECT FILE</string>
    <string name="uploadAttachment">Upload Attachment</string>
    <string name="confirmDeleteAttachment">Confirm Delete Attachment?</string>
    <string name="newFileName">New File Name:</string>
    <string name="duplicateName">Please use another file name</string>
    <string name="noDescription">No Description has been provided by task creator</string>
    <string name="viewTaskOwnerListLbl"><u>View task owner list</u></string>
    <string name="event">Event</string>
    <string name="task">Task</string>
    <string name="join">JOIN</string>
    <string name="markEventCompletion">EVENT COMPLETED</string>
    <string name="taskEvent">Task &amp; Event</string>
    <string name="joinedTakeUp">My to-do</string>
    <string name="waitingForAttention">Awaiting</string>

    <string-array name="noOfVotingOptions">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
