<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/pollingGroupSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginBottom="5dp">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pollingGroup" />

                <Spinner
                    android:id="@+id/pollingGroupSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:visibility="visible">
                </Spinner>

            </LinearLayout>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/pollingSetup" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pollingQuesTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pollingQuestion">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pollingQuestionTbx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="5"/>

            </android.support.design.widget.TextInputLayout>


            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/votingMode" />

            <RadioGroup
                android:id="@+id/singleOrMultiRgp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/single_vote_rbtn"
                    android:text="@string/singleVotesOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/multiple_votes_rbtn"
                    android:text="@string/multipleVotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/votingOptions" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noOfOptions"/>

                <Spinner
                    android:id="@+id/noOfOptionsSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog"
                    android:visibility="visible"
                    android:textAlignment="viewEnd"
                    android:entries="@array/noOfVotingOptions">
                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pollingOptionsListLinearLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/option1Tbx"
                    android:hint="@string/option1"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/options2Tbx"
                    android:hint="@string/option2"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/options3Tbx"
                    android:hint="@string/option3"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/options4Tbx"
                    android:hint="@string/option4"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/options5Tbx"
                    android:hint="@string/option5"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_done_white_24dp" />

</android.support.design.widget.CoordinatorLayout>