<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.msccs.hku.familycaregiver.Activity.CreateNewTaskActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/taskInfo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/taskName">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/taskNameTbx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/taskDescription">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/taskDescriptionTbx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="5"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/taskGroupSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/taskGroup" />

                <Spinner
                    android:id="@+id/taskGroupSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:visibility="visible">
                </Spinner>

            </LinearLayout>



            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/taskType" />

            <RadioGroup
                android:id="@+id/taskTypeRgp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/important_task_rbtn"
                    android:text="@string/importantTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/casual_task_rbtn"
                    android:text="@string/casualTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/reminder_task_rbtn"
                    android:text="@string/reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/schedule" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/allDaySwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/allDay" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:text="@string/eventStart">
                    </TextView>

                    <TextView
                        android:id="@+id/startDateTxtView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:gravity="center_horizontal|end"
                        android:layout_weight="10"/>

                    <TextView
                        android:id="@+id/startTimeTxtView"
                        android:textColor="@color/black"
                        android:gravity="right"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/startTime"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:paddingTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:text="@string/eventEnd">
                    </TextView>

                    <TextView
                        android:id="@+id/endDateTxtView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_weight="10"
                        android:gravity="center_horizontal|end"/>


                    <TextView
                        android:id="@+id/endTimeTxtView"
                        android:textColor="@color/black"
                        android:gravity="right"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/endTime"/>

                </LinearLayout>





            </LinearLayout>

        </LinearLayout>

    </ScrollView>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_save_white_24dp" />

</android.support.design.widget.CoordinatorLayout>
